--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 				<!-- Work History -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/taranaki1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Taranaki District Health Board</h2>
@@ -64,9 +63,10 @@
 									</ul>
 								</div>
 							</div>
+							<a href="#" class="image"><img src="images/taranaki1.jpg" alt="" data-position="center center" /></a>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/F.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Freelance | Virtual Assistant</h2>
@@ -82,7 +82,6 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/queenbank.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Queen City Development Bank</h2>
@@ -95,6 +94,7 @@
 									</ul>
 								</div>
 							</div>
+							<a href="#" class="image"><img src="images/queenbank.png" alt="" data-position="25% 25%" /></a>
 						</section>
 						<section>
 							<a href="#" class="image"><img src="images/waffletime.jpg" alt="" data-position="25% 25%" /></a>
@@ -171,7 +171,6 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/udemy.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Udemy Course</h2>
@@ -181,6 +180,7 @@
 									</ul>
 								</div>
 							</div>
+							<a href="#" class="image"><img src="images/udemy.jpg" alt="" data-position="top center" /></a>
 						</section>
 						<section>
 							<a href="#" class="image"><img src="images/hbc.png" alt="" data-position="25% 25%" /></a>
@@ -195,7 +195,6 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/projects.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Projects & Works</h2>
@@ -205,6 +204,7 @@
 									</ul>
 								</div>
 							</div>
+							<a href="#" class="image"><img src="images/projects.png" alt="" data-position="25% 25%" /></a>
 						</section>
 					</section>
 
