--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
+						<!-- <li><a href="generic.html" class="active">Generic</a></li>-->
 						<!-- <li><a href="elements.html">Elements</a></li> -->
 					</ul>
 				</nav>
@@ -27,10 +27,10 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">Educational Background</h1>
+							<span class="image fit"><img src="images/stpaulbldg.jpg" alt="" /></span>
+							<p>In 2006, I graduated from St. Paul University Iloilo with a Bachelor's Degree in Information Technology, specializing in programming. It was the culmination of years of dedication and the start of my journey in the tech world.</p>
+							<p>In 2020, my degree was later converted to NZQA Level 7 in IT. Throughout my professional career, I have continued to hone my skills by enrolling in various online courses.</p>
 						</div>
 					</section>
 
@@ -40,7 +40,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<center><li>&copy; My Portfolio. All rights reserved.</li><li>Jefrey Villanueva</a></li></center>
+						<center><li>&copy; My Portfolio. All rights reserved.</li><li>Jefrey Villanueva</li></center>
 					</ul>
 				</div>
 			</footer>
