--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>My Portfolio by Jefrey Villanueva</title>
@@ -19,7 +14,7 @@
 				<div class="inner">
 					<nav>
 						<img src="images/2x2cv.png" alt="" data-position="center center" />
-						<ul>MY PORTFOLIO
+						<ul><strong>MY PORTFOLIO</strong>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Work History</a></li>
 							<li><a href="#two">Skills</a></li>
@@ -41,10 +36,8 @@
 								4 years of experience as a Virtual Assistant specializing in Digital Marketing. Possesses versatility, commercial awareness, 
 								and a rapid ability to acquire new skills. Proven track record in handling diverse responsibilities, 
 								supported by an NZQA Level 7 qualification in Information Technology, and enriched by valuable overseas work experience.</p>
-								<!--<a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p> -->
 							<ul class="actions">
-								<li><a href="AboutMe.html" class="button">Learn more</a></li>
+								<li><a href="AboutMe.html" class="button">More About Me</a></li>
 							</ul>
 						</div>
 					</section>
@@ -59,24 +52,24 @@
 									<p>Efficiently coordinate with surgeons, manage referrals, and oversee the scheduling and booking of surgical procedures. 
 										Ensure patients are fully informed and prepared for their surgeries.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="tdhb.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
-							<a href="#" class="image"><img src="images/taranaki1.jpg" alt="" data-position="center center" /></a>
+							<!--<a href="tdhb.html" class="image"><img src="images/taranaki1.jpg" alt="" data-position="center center" /></a>-->
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/F.png" alt="" data-position="top center" /></a>
+							<!--<a href="freelance.html" class="image"><img src="images/F.png" alt="" data-position="top center" /></a>-->
 							<div class="content">
 								<div class="inner">
 									<h2>Freelance | Virtual Assistant</h2>
-									<h3>April 2015 - April 2018</h3>
+									<h3>April 2015 - July 2019</h3>
 									<p>Drive online traffic and enhance website performance by tracking marketing conversion rates and implementing improvements. 
 										Manage social media, email marketing, and data scraping, while coordinating marketing campaigns and budgets. 
 										Skilled in product graphic design to support marketing efforts.
 									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="freelance.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -90,21 +83,22 @@
 										Provide Level 1 to 3 support, generate financial reports, and ensure thorough ATM and CCTV monitoring.
 										</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="queenbank.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
-							<a href="#" class="image"><img src="images/queenbank.png" alt="" data-position="25% 25%" /></a>
+							<!--<a href="#" class="image"><img src="images/queenbank.png" alt="" data-position="25% 25%" /></a>-->
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/waffletime.jpg" alt="" data-position="25% 25%" /></a>
+							<!--<a href="wti.html" class="image"><img src="images/waffletime.jpg" alt="" data-position="25% 25%" /></a>-->
 							<div class="content">
 								<div class="inner">
 									<h2>Waffletime Inc.</h2>
 									<h3>MIS Technical Officer<br />September 2023 - February 2024<br />March 2009 - March 2012</h3>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Provide comprehensive technical support (Levels 1 to 3), resolving hardware, software, and system issues to ensure smooth business operations. 
+										Managed databases, updated POS software, and trained staff to enhance efficiency and minimize downtime.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="wti.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -151,7 +145,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="skill.html" class="button">More Details</a></li>
 							</ul>
 						</div>
 					</section>
@@ -159,13 +153,13 @@
 				<!--Certificates-->
 					<section id="three" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/stpaul.jpg" alt="" data-position="center center" /></a>
+							<a href="education.html" class="image"><img src="images/stpaul.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Educational Background</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Graduated with a Bachelor's Degree in Information Technology, which was later recognized internationally as NZQA Level 7 in New Zealand.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="education.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -173,23 +167,24 @@
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Udemy Course</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Online Course Certificates</h2>
+									<h3>Udemy & Home-Base Connect Certificates</h3>
+									<p></p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="onlinecert.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 							<a href="#" class="image"><img src="images/udemy.jpg" alt="" data-position="top center" /></a>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/hbc.png" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/certificates.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Home Base Connect Course</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Other Certificates</h2>
+									<p></p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="othercert.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -198,15 +193,15 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Projects & Works</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>View my Projects and Works</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="projects.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 							<a href="#" class="image"><img src="images/projects.png" alt="" data-position="25% 25%" /></a>
 						</section>
-					</section>
+				</section>
 
 				<!-- Contact Me -->
 					<section id="four" class="wrapper style1 fade-up">
@@ -214,7 +209,8 @@
 							<h2>Get in touch</h2>
 							<p>Reach me out so we can discuss and address your pain points.</p>
 							<div class="split style1">
-								<section>
+								<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSedBXeht4ob5ZwW13memRP2CaSbwBNyztDL1sF_ZDaHVlrWiQ/viewform?embedded=true" width="640" height="721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+								<!--<section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
@@ -234,7 +230,7 @@
 											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
-								</section>
+								</section>-->
 								<section>
 									<ul class="contact">
 										<li>
@@ -245,7 +241,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">jefrey.villanueva.ph@gmail.com</a>
+											<a href="mailto:jefrey.villanueva.ph@gmail.com">jefrey.villanueva.ph@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
@@ -256,7 +252,7 @@
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="https://www.facebook.com/jefrey.villanueva.90" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="https://github.com/jsvfreelancer/jsvportwebsite.github.io" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://jsvfreelancer.github.io/jsvportwebsite.github.io/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.linkedin.com/in/jefrey-villanueva120/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
