--- a/tdhb.html
+++ b/tdhb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>My Portfolio - About Me</title>
+		<title>My Portfolio - TDHB Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,11 +27,26 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">About Me Page</h1>
-							<center><span class="imageme fit"><img src="images/2x2cv.png" alt="" /></span></center>
-							<p>With over 12 years of diverse experience in Information and Communication Technology (ICT), I have built a dynamic career across multiple industries, including food service, banking, healthcare, and digital marketing. My expertise spans system administration, technical support, and database management, consistently ensuring smooth operations and minimizing downtime. I began my career as a Technical Officer in the food industry, advancing to Systems Administrator in banking, where I managed system infrastructure and provided critical support.</p>
-							<p>In the healthcare sector, I contributed as a Booking Administrator, streamlining patient scheduling and liaising with surgeons to optimize the surgical process. Additionally, I have over four years of experience as a Virtual Assistant, specializing in general administration and digital marketing. During this time, I provided high-quality support in social media management, email marketing, and SEO.</p>
-							<p>My adaptability and versatility allow me to quickly master new tools and systems, making me an effective problem-solver in any work environment. As a proactive self-starter, I am committed to delivering high-impact results and consistently exceeding expectations.</p>
+							<h1 class="major">Taranaki District Health Board</h1>
+							<span class="image fit"><img src="images/taranaki1.jpg" alt="" /></span>
+							<p><strong>Booking Administrator - Surgical Department</strong><br />Taranaki District Health Board New Zealand October 2019 - July 2022<br />
+							<strong>Roles and Responsibilities:</strong>
+							<ul>
+								<li>Managed the end-to-end scheduling and booking process for patient surgical procedures, ensuring efficient use of resources.</li>
+								<li>Acted as the primary liaison between surgeons and patients, ensuring clear communication regarding surgical details and patient preparedness.</li>
+								<li>Processed and triaged referrals for surgical approval, ensuring all necessary documentation was completed and compliant with medical standards.</li>
+								<li>Developed and implemented processes that improved patient experience and streamlined administrative tasks.</li>
+								<li>Maintained meticulous records of patient interactions and surgery schedules, ensuring accuracy and confidentiality.</li>
+							</ul>
+							<strong>Software Used:</strong>
+							<ul class="column-list">
+								<li>Microsoft Office</li>
+								<li>Window 10</li>
+								<li>Citrix</li>
+								<li>IBAWebPas</li>
+								<li>Microsoft Teams</li>
+								<li>RDP</li>
+							</p>
 						</div>
 					</section>
 
