--- a/othercert.html
+++ b/othercert.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>My Portfolio by Jefrey Villanueva</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">My Portfolio</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -25,13 +25,13 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">Other Certificates</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
 						</div>
 					</section>
-			</div>
+			</div><center>
 			<div class="thumbnail-gallery">
 				<div class="thumbnail">
 					<a href="images/waffletime.jpg" target="_blank">
@@ -53,9 +53,38 @@
 						<img src="images/" alt="Image 4">
 					</a>
 				</div>
+				<div class="thumbnail">
+					<a href="images/" target="_blank">
+						<img src="images/" alt="Image 5">
+					</a>
+				</div>		
+				<div class="thumbnail">
+					<a href="images/waffletime.jpg" target="_blank">
+						<img src="images/waffletime.jpg" alt="Image 6">
+					</a>
+				</div>
+				<div class="thumbnail">
+					<a href="images/" target="_blank">
+						<img src="images/projects.png" alt="Image 7">
+					</a>
+				</div>
+				<div class="thumbnail">
+					<a href="images/" target="_blank">
+						<img src="images/" alt="Image 8">
+					</a>
+				</div>
+				<div class="thumbnail">
+					<a href="images/" target="_blank">
+						<img src="images/" alt="Image 9">
+					</a>
+				</div>
+				<div class="thumbnail">
+					<a href="images/" target="_blank">
+						<img src="images/" alt="Image 10">
+					</a>
+				</div>		
 			</div>
-			
-
+		</center>
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
