--- a/skill.html
+++ b/skill.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>My Portfolio by Jefrey Villanueva</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">My Portfolio</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -25,10 +25,11 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">Skills Page</h1>
+							<span class="image fit"><img src="images/cc.png" alt="" /></span>
+							<p>With 12+ years of experience across IT and administration, I specialize in system administration, database management, and technical support (Levels 1 to 3). Proficient in Database Management and Data Analytics. I ensure efficient operations and minimize downtime.</br>
+							Additionally, I have 4 years of expertise in Virtual Assistance and Digital Marketing, focusing on social media management, email marketing, and SEO. My adaptability and problem-solving skills allow me to quickly master new tools and deliver impactful results in fast-paced environments.
+							</p>
 						</div>
 					</section>
 			</div>
